--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "alertifyjs": "^1.13.1",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "formik-semantic-ui-react": "^2.0.0",
